docs: echo 내용추가 주석추가

--- a/docs/linux/기본명령어.md
+++ b/docs/linux/기본명령어.md
@@ -10,7 +10,8 @@ ls -t -r
 
 ## echo
 ```bash
-# 줄 바꿈과 함께 내용 추가 & 출력
+# echo -e "입력하고싶은 문자열": 주어진 문자열을 출력합니다.
+# sudo tee -a /etc/hosts: 출력된 문자열을 /etc/hosts 파일에 추가합니다. -a 옵션은 파일의 끝에 추가함을 의미합니다.
 echo -e "127.0.0.1 fin-ncloud.apigw.fin-ntruss.com" | sudo tee -a /etc/hosts
 echo -e "127.0.0.1 nks.apigw.fin-ntruss.com\n" | sudo tee -a /etc/hosts
 cat /etc/hosts 
