docs: 에이전트 설치 가이드 추가

--- a/docs/cloud/NCP devtool/소스파이프라인참고.md
+++ b/docs/cloud/NCP devtool/소스파이프라인참고.md
@@ -42,7 +42,7 @@
     ```
 - 파일 배포
 ![](img/2023-09-15-16-53-37.png) \
-![](img/2023-09-15-16-53-01.png) 
+(mvntest.zip 파일구조 참고) ![](img/2023-09-15-16-53-01.png) 
     ```sh
     #소스 파일 경로 
     #('/'는 테스트 결과{'/opt/sourcedeploy/working/127356/source/'} 에러발생시 참고)
@@ -53,6 +53,7 @@
 
 - 배포 후 실행 명령어
 ![](img/2023-09-15-16-57-45.png)
+ROOT폴더로 배포하기
     ```sh
     # 배포 후 실행 명령어
     # 배포된 mvndemo-0.0.1-SNAPSHOT.war 파일을 ROOT.war로 이름을 변경합니다.
@@ -70,9 +71,44 @@
 2. **파이프라인 실행**
    - 설정한 파이프라인을 실행하여 전체 프로세스가 잘 작동하는지 확인합니다.
 
-이 내용을 기반으로 가이드를 작성하면, 사용자가 네이버 클라우드 플랫폼을 이용한 소스 빌드, 디플로이, 그리고 파이프라인 생성에 대해 쉽게 이해할 수 있을 것입니다.
 
 
 ---
+
 ## 에이전트 설치
-> https://guide.ncloud-docs.com/docs/devtools-devtools-4-4
+민간존 기준임
+### 직접 서버 접속 후 작성
+```sh
+# `accesskey`에 API 인증키 Access Key ID를 입력해 주십시오.
+# `secretkey`에 API 인증키 Secret Key를 입력해 주십시오.
+echo $'NCP_ACCESS_KEY=accesskey\nNCP_SECRET_KEY=secretkey' > /opt/NCP_AUTH_KEY
+chmod 400 /opt/NCP_AUTH_KEY
+wget https://sourcedeploy-agent.apigw.ntruss.com/agent/vpc/download/install
+# wget https://sourcedeploy-agent.apigw.ntruss.com/agent/v2/download/install #클래식(KR)
+chmod 755 install
+./install
+# rm -rf install
+service sourcedeploy start
+service sourcedeploy status
+```
+- 에이전트 프로세스 확인
+    ```sh
+    ps -ef | grep main.py 
+    ```
+    ![](img/2023-09-15-17-23-30.png)
+
+### Init Script 작성
+```sh
+#!/bin/bash
+echo $'NCP_ACCESS_KEY=accesskey\nNCP_SECRET_KEY=secretkey' > /opt/NCP_AUTH_KEY
+chmod 400 /opt/NCP_AUTH_KEY
+wget https://sourcedeploy-agent.apigw.ntruss.com/agent/vpc/download/install
+chmod 755 install
+./install
+# rm -rf install
+```
+`accesskey`에 API 인증키 Access Key ID를 입력해 주십시오. \
+`secretkey`에 API 인증키 Secret Key를 입력해 주십시오.
+
+> https://guide.ncloud-docs.com/docs/devtools-devtools-4-4 #에이전트 설치 및 관리 NCP 가이드
+---
