docs: 소스파이프라인 가이드라인 1차완성

--- a/docs/cloud/NCP devtool/소스파이프라인참고.md
+++ b/docs/cloud/NCP devtool/소스파이프라인참고.md
@@ -64,17 +64,31 @@ ROOT폴더로 배포하기
 
 
 # 소스 파이프라인 생성
+## 0. 사전 작업
+- **SourceCommit, SourceBuild, SourceDeploy** 모두 있어야 합니다.
+- 레포지토리에 `push`등 변화가 감지되면 트리거로 빌드 / 배포 되는 것을 목표로 합니다.
+## 1. 파이프라인 설정
+### 작업추가
+- 빌드 파이프라인 추가
+![](img/2023-09-15-17-35-00.png)
 
-1. **파이프라인 설정**
-   - 빌드와 디플로이를 자동화하기 위한 파이프라인을 설정합니다.
+- 배포 파이프라인 추가
+![](img/2023-09-15-17-36-19.png)
 
-2. **파이프라인 실행**
-   - 설정한 파이프라인을 실행하여 전체 프로세스가 잘 작동하는지 확인합니다.
+- 파이프라인 설정  
+![](img/2023-09-15-17-36-51.png) \
+선행작업설정으로 파이프라인 순서 설정
 
-
+- 트리거 설정 \
+위에서 작업추가로 설정한 전체 파이프라인을 실행할 Trigger 설정 \
+여기서는 소스커밋 푸시를 트리거로 설정
+![](img/2023-09-15-17-40-30.png)
+## 2. 파이프라인 실행
+- 설정한 파이프라인을 실행하여 전체 프로세스가 잘 작동하는지 확인합니다.  
+*직접 파이프라인 실행하기 버튼 클릭 / 소스커밋 푸시 이벤트 발생시키기*
 
 ---
-
+---
 ## 에이전트 설치
 민간존 기준임
 ### 직접 서버 접속 후 작성
