--- a/docs/etc/인코딩관련.md
+++ b/docs/etc/인코딩관련.md
@@ -1,3 +1,10 @@
+---
+tags:
+  - python
+  - encoding
+  - utf-8
+  - "#error"
+---
 ## Python의 csv 모듈은 기본적으로 utf-8 인코딩을 사용하지만, 몇몇 시스템에서는 이를 제대로 처리하지 못할 수 있습니다.
 한글이 깨져서 파일이 생성되는 문제는 일반적으로 인코딩 문제로 발생합니다. Python의 `csv` 모듈은 기본적으로 `utf-8` 인코딩을 사용하지만, 몇몇 시스템에서는 이를 제대로 처리하지 못할 수 있습니다.
 
