--- a/docs/linux/기본명령어.md
+++ b/docs/linux/기본명령어.md
@@ -1,3 +1,6 @@
+---
+tags: linux
+---
 ## ls
 ls 명령어를 이용해서 디렉터리 안의 항목을 리스트 할 수 있다. -t 플래그를 주면 마지막 업데이트 시각을 기준으로 정렬하고 -u 플래그로 마지막 액세스 시각을 기준으로 정렬할 수 있다. 그리고 -U 플래그로 생성일 기준 정렬을 할 수 있다.
 
