--- a/docs/git/깃_기본가이드.md
+++ b/docs/git/깃_기본가이드.md
@@ -74,4 +74,48 @@ git push origin <branch-name>
 
 작업이 완료되면 변경 사항이 원격 레포지토리에 반영됩니다.
 
-[돌아가기](../README.md)
+
+## Git 작업 흐름 요약
+
+1. **레포지토리 클론(Clone)** - 원격 레포지토리를 로컬로 복사합니다.
+
+2. **브랜치 생성 및 전환** - 작업할 브랜치를 생성하고 전환합니다.
+
+3. **코드 수정** - 필요한 코드 변경을 합니다.
+
+4. **스테이징(Staging)** - 변경된 파일을 커밋할 준비를 합니다.
+
+5. **커밋(Commit)** - 스테이징한 변경사항을 로컬 레포지토리에 저장합니다.
+
+6. **푸시(Push)** - 로컬의 커밋을 원격 레포지토리에 업로드합니다.
+
+---
+
+
+### 원격 레포지토리 설정 (Remote)
+
+- **Remote Add**: 로컬 레포지토리에 원격 레포지토리를 추가합니다.
+  ```bash
+  git remote add <remote-name> <repository-url>
+  ```
+  
+- **Remote -v**: 등록된 원격 레포지토리의 목록을 보여줍니다.
+  ```bash
+  git remote -v
+  ```
+
+### 데이터 가져오기 (Fetch & Pull)
+
+- **Fetch**: 원격 레포지토리의 변경사항을 로컬로 가져오지만 자동으로 병합(merge)하지는 않습니다.
+  ```bash
+  git fetch <remote-name>
+  ```
+
+- **Pull**: 원격 레포지토리의 변경사항을 로컬로 가져와서 자동으로 병합합니다. 이는 `git fetch`와 `git merge`의 조합으로 생각할 수 있습니다.
+  ```bash
+  git pull <remote-name> <branch-name>
+  ```
+
+---
+
+[돌아가기](/README.md)
