docs: 깃 가이드 다듬기

--- a/docs/git/브랜치_작업가이드_상세.md
+++ b/docs/git/브랜치_작업가이드_상세.md
@@ -16,6 +16,7 @@
 - **역할**: 기능 개발 브랜치로 사용하며, 여러 기능 또는 작업을 독립적으로 개발하는 브랜치입니다.
 - **규칙**: 개발이 완료되면, 테스트가 완료되고 문제가 없는 경우 `submaster` 브랜치로 병합합니다.
 - **알림**: `submaster`에서 분기해서 사용합니다. 기본적으로 만들어져 있지 않습니다.
+- *_~~**현실**: 근데 저는 `function` 브랜치를 바로 `master`에 올리는 상남자입니다~~_*
 
 ### 브랜치 작업 흐름
 ```bash
@@ -126,4 +127,4 @@ git merge --abort
 ```
 
 이러한 과정을 통해 기능 브랜치와 `submaster`의 병합을 시뮬레이션하고, 충돌을 미리 확인하며, 필요한 경우 해결책을 준비할 수 있습니다.  
- * [돌아가기](../README.md) 
+ * [돌아가기](./브랜치_작업가이드.md) 
