--- a/docs/git/커밋가이드.md
+++ b/docs/git/커밋가이드.md
@@ -51,6 +51,6 @@ Feat: 정기점검 보고서 민간존 기능 추가 (#789)
 
 이 가이드라인은 커밋 메시지 작성 시 참고하면 좋은 규칙과 형식을 제공합니다.
 
-- [돌아가기](../README.md)
+- [돌아가기](/README.md)
 
 ---
