--- a/docs/linux/셸 프롬포트형식 지정.md
+++ b/docs/linux/셸 프롬포트형식 지정.md
@@ -1,3 +1,6 @@
+---
+tags: linux, bash
+---
 셸 프롬포트형식 오류
 첫 번째 접속에서는 프롬프트가 `[root@lsyncd ~]#`로 표시되었고, 다시 접속하니 `bash-4.2#`로 변경된 것을 볼 수 있습니다. 이것은 다음과 같은 이유로 발생할 수 있습니다:
 
