chore: 리눅스 user

--- a/docs/linux/리눅스 사용자 계정 생성.md
+++ b/docs/linux/리눅스 사용자 계정 생성.md
@@ -10,7 +10,7 @@ tags:
 
 ## `useradd`
 
-- 홈 디렉토리를 자동으로 생성하지 않습니다.
+- 홈 디렉토리 자동생성 O
   ```bash
   sudo useradd -m -s /bin/bash ncloud
   ```
@@ -18,7 +18,7 @@ tags:
   
 ## `adduser`
 
-- 홈 디렉토리를 자동으로 생성합니다.
+- 홈 디렉토리 자동 생성 X
   ```bash
   sudo adduser ncloud
   ```
