docs: 브랜치 작업가이드 개편

--- a/docs/git/브랜치_작업가이드.md
+++ b/docs/git/브랜치_작업가이드.md
@@ -31,7 +31,7 @@
 3. 최종 안정화: `git checkout master` -> `git merge submaster`  
    _2,3단계에서 명령어로 바로 병합하는 대신,원격 저장소에서 Pull Request를 사용하면 코드 리뷰와 안전한 병합이 가능합니다._
 
-- [브랜치 작업가이드 상세](./브랜치_작업가이드_상세.md)
+- [브랜치 작업가이드 상세](브랜치_작업가이드_요약.md#브랜치-작업-흐름)
 
 ## submaster에서 기능 브랜치 생성 및 병합
 
