--- a/docs/git/브랜치_작업가이드.md
+++ b/docs/git/브랜치_작업가이드.md
@@ -1,25 +1,25 @@
 # Git 브랜치 작업 가이드
 
-### 1. `master` 브랜치
+### 1. `main` 브랜치
 
 - **안정적인 코드 저장**
-- 규칙: 직접 커밋하지 않고, `submaster` 브랜치에서 검증된 내용만 병합합니다.
+- 규칙: 직접 커밋하지 않고, `sub` 브랜치에서 검증된 내용만 병합합니다.
 
-### 2. `submaster` 브랜치
+### 2. `sub` 브랜치
 
 - **테스트와 중간 단계의 브랜치**
-- 규칙: `function` 브랜치에서 개발된 내용 병합하고, 문제 없으면 `master`로 병합
+- 규칙: `function` 브랜치에서 개발된 내용 병합하고, 문제 없으면 `main`로 병합
 
 ### 3. `function` 브랜치
 
 - **개별 기능 개발 브랜치**
-- 규칙: 개발이 완료되면, `submaster` 브랜치로 병합합니다.
-- 알림: _`submaster`에서 분기해서 사용합니다. 기본적으로 만들어져 있지 않습니다._
+- 규칙: 개발이 완료되면, `sub` 브랜치로 병합합니다.
+- 알림: _`sub`에서 분기해서 사용합니다. 기본적으로 만들어져 있지 않습니다._
 
 ---
 
-- `master` 🌳
-  - `submaster` 🌿
+- `main` 🌳
+  - `sub` 🌿
     - function-a 🍃
     - function-b 🍃
 
@@ -27,33 +27,33 @@
 
 1. 기능 개발: `git checkout function`  
    (_새 기능 브랜치 생성: `git checkout -b <branch-name>`_)
-2. 중간 검증: `git checkout submaster` -> `git merge function`
-3. 최종 안정화: `git checkout master` -> `git merge submaster`  
+2. 중간 검증: `git checkout sub` -> `git merge function`
+3. 최종 안정화: `git checkout main` -> `git merge sub`  
    _2,3단계에서 명령어로 바로 병합하는 대신,원격 저장소에서 Pull Request를 사용하면 코드 리뷰와 안전한 병합이 가능합니다._
 
 - [브랜치 작업가이드 상세](브랜치_작업가이드_요약.md#브랜치-작업-흐름)
 
-## submaster에서 기능 브랜치 생성 및 병합
+## sub에서 기능 브랜치 생성 및 병합
 
-1. **submaster로 이동**: `git checkout submaster`
-2. **최신 상태 업데이트**: `git pull origin submaster`
+1. **sub로 이동**: `git checkout sub`
+2. **최신 상태 업데이트**: `git pull origin sub`
 3. **새 기능 브랜치 생성**: `git checkout -b <branch-name>`
-4. **기능 브랜치 작업 후 병합**: `git checkout submaster` -> `git merge <branch-name>`
+4. **기능 브랜치 작업 후 병합**: `git checkout sub` -> `git merge <branch-name>`
 
-## submaster 브랜치 변경사항 기능 브랜치에 적용
+## sub 브랜치 변경사항 기능 브랜치에 적용
 
-1. **submaster 최신 변경사항 가져오기**: `git checkout submaster` -> `git pull origin submaster`
+1. **sub 최신 변경사항 가져오기**: `git checkout sub` -> `git pull origin sub`
 2. **기능 브랜치로 이동**: `git checkout <feature-branch>`
-3. **병합 충돌 시뮬레이션**: `git merge --no-commit --no-ff submaster`
+3. **병합 충돌 시뮬레이션**: `git merge --no-commit --no-ff sub`
 4. **시뮬레이션 병합 취소**: `git merge --abort`  
-   _이러한 과정을 통해 기능 브랜치와 `submaster`의 병합을 시뮬레이션하고, 충돌을 미리 확인할 수 있습니다._
+   _이러한 과정을 통해 기능 브랜치와 `sub`의 병합을 시뮬레이션하고, 충돌을 미리 확인할 수 있습니다._
 
 ## **브랜치 삭제 가이드**
 
 ### 로컬 브랜치 삭제
 
 1. **현재 브랜치 확인**: `git branch`
-2. **다른 브랜치로 이동**: 예) `git checkout submaster`
+2. **다른 브랜치로 이동**: 예) `git checkout sub`
 3. **브랜치 삭제**: 안전 삭제) `git branch -d <branch-name>` / 강제 삭제) `git branch -D <branch-name>`
 
 ### 원격 브랜치 삭제
