깃 기본가이드 가독성 개선?

--- a/docs/git/깃_기본가이드.md
+++ b/docs/git/깃_기본가이드.md
@@ -1,31 +1,60 @@
 # Git 작업 가이드 (Visual Studio Code)
  **Git 기본 가이드**: 기본적인 Git 작업 방법에 대해 알아보겠습니다. 레포지토리를 클론하고, 브랜치를 생성 및 전환하며, 코드를 수정하고, 스테이징하며, 커밋하고, 원격 레포지토리에 푸시하는 방법을 배워봅시다.
 
-## 용어 설명
-
+### 용어 설명
 - **클론(Clone)**: 원격 레포지토리의 내용을 로컬에 복사하는 과정.
 - **스테이징(Staging)**: 커밋할 파일을 선택하는 과정. 선택된 파일은 '스테이지 영역'에 올라갑니다.
 - **커밋(Commit)**: 스테이지 영역에 올라간 변경 사항을 로컬 레포지토리에 저장하는 과정.
 - **푸시(Push)**: 로컬 레포지토리의 커밋을 원격 레포지토리에 업로드하는 과정.
 
-## 초기 설정: 사용자 이름, 이메일 주소 설정
+## Git 작업 흐름 요약
+
+1. **레포지토리 클론(Clone)** - 원격 레포지토리를 로컬로 복사합니다.
+
+2. **브랜치 생성 및 전환** - 작업할 브랜치를 생성하고 전환합니다.
+
+3. **코드 수정** - 필요한 코드 변경을 합니다.
+
+4. **스테이징(Staging)** - 변경된 파일을 커밋할 준비를 합니다.
+
+5. **커밋(Commit)** - 스테이징한 변경사항을 로컬 레포지토리에 저장합니다.
+
+6. **푸시(Push)** - 로컬의 커밋을 원격 레포지토리에 업로드합니다.
+
+## 초기 설정: 
 ```bash
-git config --global user.name "Your Name"
-git config --global user.email "your.email@example.com"
+  #사용자 이름, 이메일 주소 설정
+  git config --global user.name "Your Name"
+  git config --global user.email "your.email@example.com"
+
+  # Git 설치 확인
+  git --version
 ```
 
-## Git 설치 확인
-```bash
-git --version
-```
-
-## 로컬 레포지토리 생성하기
-프로젝트 폴더로 이동한 다음:
+### (선택1) 로컬 레포지토리 생성하기
+프로젝트 폴더로 이동한 후, 아래의 명령어를 실행하여 로컬 레포지토리를 초기화합니다.
 ```bash
 git init
 ```
+- 첫 번째 커밋 (First Commit):
+로컬 레포지토리를 초기화한 후, 첫 번째 커밋을 생성하기 위해 다음 단계를 따릅니다:
 
-## VS Code에서 레포지토리 클론하기
+1. 프로젝트에 필요한 파일을 생성하거나 수정합니다.
+
+2. 변경 사항을 스테이징 영역에 추가합니다.
+    ```bash
+    git add .
+    ```
+    또는 특정 파일만 스테이징하려면:
+    ```bash
+    git add <file-name>
+    ```
+
+3. 스테이징된 변경 사항을 커밋합니다.
+    ```bash
+    git commit -m "First commit"
+    ```
+### (선택2) VS Code에서 레포지토리 클론하기
 
 1. "Source Control" 아이콘을 클릭합니다.
 2. "Clone Repository" 버튼을 눌러서 레포지토리 URL을 입력합니다.
@@ -44,7 +73,6 @@ git checkout -b <branch-name>
 
 ## 스테이징 (Staging)
 
-- **CLI를 사용한 방법**:
 ```bash
 git add <file-name>
 ```
@@ -54,7 +82,6 @@ git add <file-name>
 
 ## 커밋 (Commit)
 
-- **CLI를 사용한 방법**:
 ```bash
 git commit -m "<commit-message>"
 ```
@@ -64,7 +91,6 @@ git commit -m "<commit-message>"
 
 ## 원격 레포지토리에 푸시 (Push)
 
-- **CLI를 사용한 방법**:
 ```bash
 git push origin <branch-name>
 ```
@@ -74,48 +100,21 @@ git push origin <branch-name>
 
 작업이 완료되면 변경 사항이 원격 레포지토리에 반영됩니다.
 
-
-## Git 작업 흐름 요약
-
-1. **레포지토리 클론(Clone)** - 원격 레포지토리를 로컬로 복사합니다.
-
-2. **브랜치 생성 및 전환** - 작업할 브랜치를 생성하고 전환합니다.
-
-3. **코드 수정** - 필요한 코드 변경을 합니다.
-
-4. **스테이징(Staging)** - 변경된 파일을 커밋할 준비를 합니다.
-
-5. **커밋(Commit)** - 스테이징한 변경사항을 로컬 레포지토리에 저장합니다.
-
-6. **푸시(Push)** - 로컬의 커밋을 원격 레포지토리에 업로드합니다.
-
 ---
-
 
 ### 원격 레포지토리 설정 (Remote)
 
-- **Remote Add**: 로컬 레포지토리에 원격 레포지토리를 추가합니다.
-  ```bash
-  git remote add <remote-name> <repository-url>
-  ```
-  
-- **Remote -v**: 등록된 원격 레포지토리의 목록을 보여줍니다.
-  ```bash
-  git remote -v
-  ```
+- **추가**: `git remote add <remote-name> <repository-url>`
+- **목록 확인**: `git remote -v`
 
 ### 데이터 가져오기 (Fetch & Pull)
 
-- **Fetch**: 원격 레포지토리의 변경사항을 로컬로 가져오지만 자동으로 병합(merge)하지는 않습니다.
-  ```bash
-  git fetch <remote-name>
-  ```
-
-- **Pull**: 원격 레포지토리의 변경사항을 로컬로 가져와서 자동으로 병합합니다. 이는 `git fetch`와 `git merge`의 조합으로 생각할 수 있습니다.
-  ```bash
-  git pull <remote-name> <branch-name>
-  ```
+- **Fetch**: `git fetch <remote-name>`
+- **Pull**: `git pull`
 
 ---
 
 [돌아가기](/README.md)
+
+위 가이드에서는 `git push`와 `git pull` 명령어의 `<branch-name>` 부분을 선택적으로 제외했습니다. 
+- [브랜치](브랜치_작업가이드.md)가 궁금하시다면 
