깃 기본가이드 분리

--- a/docs/git/깃_기본가이드.md
+++ b/docs/git/깃_기본가이드.md
@@ -1,84 +1,44 @@
-# Git 작업 가이드 (Visual Studio Code)
- **Git 기본 가이드**: 기본적인 Git 작업 방법에 대해 알아보겠습니다. 레포지토리를 클론하고, 브랜치를 생성 및 전환하며, 코드를 수정하고, 스테이징하며, 커밋하고, 원격 레포지토리에 푸시하는 방법을 배워봅시다.
-
-### 용어 설명
-- **클론(Clone)**: 원격 레포지토리의 내용을 로컬에 복사하는 과정.
-- **스테이징(Staging)**: 커밋할 파일을 선택하는 과정. 선택된 파일은 '스테이지 영역'에 올라갑니다.
-- **커밋(Commit)**: 스테이지 영역에 올라간 변경 사항을 로컬 레포지토리에 저장하는 과정.
-- **푸시(Push)**: 로컬 레포지토리의 커밋을 원격 레포지토리에 업로드하는 과정.
-
-## Git 작업 흐름 요약
-
-1. **레포지토리 클론(Clone)** - 원격 레포지토리를 로컬로 복사합니다.
-
-2. **브랜치 생성 및 전환** - 작업할 브랜치를 생성하고 전환합니다.
-
-3. **코드 수정** - 필요한 코드 변경을 합니다.
-
-4. **스테이징(Staging)** - 변경된 파일을 커밋할 준비를 합니다.
-
-5. **커밋(Commit)** - 스테이징한 변경사항을 로컬 레포지토리에 저장합니다.
-
-6. **푸시(Push)** - 로컬의 커밋을 원격 레포지토리에 업로드합니다.
+# Git 기본 가이드: 명령어 위주 (Visual Studio Code)
+이 가이드는 Git을 처음 사용하는 개발자를 위해 Visual Studio Code에서 Git을 사용하기 위한 기본 명령어을 단계별로 알려줍니다
+  
+**Git 작업 흐름 요약**
+   1. **레포지토리 클론(Clone)** 
+   2. **코드 수정** 
+   3. **스테이징(Staging)** 
+   4. **커밋(Commit)** 
+   5. **푸시(Push)**
 
 ## 초기 설정: 
 ```bash
   #사용자 이름, 이메일 주소 설정
   git config --global user.name "Your Name"
   git config --global user.email "your.email@example.com"
-
-  # Git 설치 확인
-  git --version
 ```
+혹시 깃이 설치되어있지 않나요? [[깃 설치]](#git-설치-윈도우)
 
-### (선택1) 로컬 레포지토리 생성하기
-프로젝트 폴더로 이동한 후, 아래의 명령어를 실행하여 로컬 레포지토리를 초기화합니다.
-```bash
-git init
-```
-- 첫 번째 커밋 (First Commit):
-로컬 레포지토리를 초기화한 후, 첫 번째 커밋을 생성하기 위해 다음 단계를 따릅니다:
+## 레포지토리 만들기 (깃허브)
+GitHub에서 새로운 레포지토리를 만들어야 합니다.
 
-1. 프로젝트에 필요한 파일을 생성하거나 수정합니다.
+1. [GitHub](https://github.com/) 사이트에 접속한 후 로그인합니다.
+2. 오른쪽 상단의 '+' 버튼을 클릭하여 'New repository'를 선택합니다.
+3. 레포지토리 이름, 설명, 접근 권한 등을 설정한 후 'Create repository' 버튼을 클릭합니다.
+4. 이렇게 하면 나오는 GitHub 페이지의 안내를 따라서 레포지토리 생성을 마칩니다.
 
-2. 변경 사항을 스테이징 영역에 추가합니다.
-    ```bash
-    git add .
-    ```
-    또는 특정 파일만 스테이징하려면:
-    ```bash
-    git add <file-name>
-    ```
-
-3. 스테이징된 변경 사항을 커밋합니다.
-    ```bash
-    git commit -m "First commit"
-    ```
-### (선택2) VS Code에서 레포지토리 클론하기
-
+### Quick setup - VS Code에서 레포지토리 클론하기
 1. "Source Control" 아이콘을 클릭합니다.
 2. "Clone Repository" 버튼을 눌러서 레포지토리 URL을 입력합니다.
 3. 클론할 로컬 경로를 선택합니다. 이 경로가 코드가 저장될 경로가 됩니다.
 
-## 브랜치 생성 및 전환하기
-
-브랜치를 생성하고 전환하려면 다음 CLI 명령어를 사용합니다:
-```bash
-git checkout -b <branch-name>
-```
-
 ## 코드 수정하기
-
-필요한 파일을 수정하고 저장합니다.
+(파일 수정 후 저장)
 
 ## 스테이징 (Staging)
 
 ```bash
-git add <file-name>
+git add .
 ```
 - **UI를 사용한 방법**:
-   1. "Source Control" 아이콘을 클릭합니다.
-   2. 변경된 파일 옆에 있는 '+' 버튼을 클릭하여 스테이징합니다.
+   "Source Control" -> '+' 버튼 클릭
 
 ## 커밋 (Commit)
 
@@ -86,35 +46,35 @@ git add <file-name>
 git commit -m "<commit-message>"
 ```
 - **UI를 사용한 방법**:
-   1. "Source Control" 아이콘을 클릭합니다.
-   2. 커밋 메시지를 입력한 후, 체크마크 버튼을 클릭합니다.
+   "Source Control" -> 커밋 메시지 입력 -> 체크 버튼 클릭
 
 ## 원격 레포지토리에 푸시 (Push)
 
 ```bash
-git push origin <branch-name>
+git push origin
 ```
 - **UI를 사용한 방법**:
-   1. "Source Control" 아이콘을 클릭합니다.
-   2. "..." 메뉴를 열고, "Push"를 선택합니다.
+   "Source Control" -> "..." -> "Push"
 
 작업이 완료되면 변경 사항이 원격 레포지토리에 반영됩니다.
 
 ---
 
-### 원격 레포지토리 설정 (Remote)
+[돌아가기](/README.md)
 
-- **추가**: `git remote add <remote-name> <repository-url>`
-- **목록 확인**: `git remote -v`
-
-### 데이터 가져오기 (Fetch & Pull)
-
-- **Fetch**: `git fetch <remote-name>`
-- **Pull**: `git pull`
+위 가이드에서는 `git push`와 `git pull` 명령어의 `<branch-name>` 부분을 선택적으로 제외했습니다.
+- [브랜치](브랜치_작업가이드.md)가 궁금하시다면 
+- [기본적인 Git 작업 방법에 대한 설명](./깃_기본가이드_설명.md)이 더 자세히 알고싶다면
 
 ---
 
-[돌아가기](/README.md)
+## Git 설치 (윈도우)
+Git이 설치되어 있지 않다면, 공식 문서에 따라 설치해야 합니다.
+- 공식 문서: [Git 설치](https://git-scm.com/book/ko/v2/시작하기-Git-설치하기)
+- 설치 파일 다운로드: [Git for Windows](https://gitforwindows.org/)
 
-위 가이드에서는 `git push`와 `git pull` 명령어의 `<branch-name>` 부분을 선택적으로 제외했습니다. 
-- [브랜치](브랜치_작업가이드.md)가 궁금하시다면 
+### 설치 확인
+설치가 완료된 후, 명령 프롬프트나 터미널에서 아래 명령어를 입력하여 설치가 정상적으로 이루어졌는지 확인합니다.
+```bash
+git --version
+```
