깃기본가이드부터 브랜치 입구까지

--- a/docs/git/깃_기본가이드_설명.md
+++ b/docs/git/깃_기본가이드_설명.md
@@ -52,12 +52,16 @@ git remote add origin https://github.com/<username>/<repository-name>.git
 git branch -M main
 git push -u origin main
 ```
-## 브랜치 생성 및 전환하기
-
-브랜치를 생성하고 전환하려면 다음 CLI 명령어를 사용합니다:
+## (브랜치 생성 및 전환하기)
+- [브랜치가 뭐죠?](브랜치_작업가이드.md) 안궁금하면 이 단계를 넘어가세요.
 ```bash
+# 새 브랜치를 생성하고 그 브랜치로 전환
 git checkout -b <branch-name>
 ```
+UI를 사용한 방법:
+   1. vscode 좌축 하단의 "Source Control" 아이콘을 클릭합니다.
+   2. 상단의 브랜치 이름을 클릭합니다.
+   3. 원하는 브랜치를 선택하거나 새 브랜치 이름을 입력합니다.
 
 ## 코드 수정하기
 이 단계에서는 실제로 프로젝트에 필요한 코드 변경을 수행합니다. 
