--- a/docs/git/브랜치_작업가이드.md
+++ b/docs/git/브랜치_작업가이드.md
@@ -1,4 +1,10 @@
 # Git 브랜치 작업 가이드
+- **브랜치 (Branch)**
+브랜치는 프로젝트의 특정 시점(커밋)에서 분기해 나가는 독립된 작업 공간입니다. 즉, 원래의 코드는 그대로 두고 새로운 브랜치를 만들어 별도로 작업할 수 있습니다. 이렇게 해서 안전하게 새로운 기능을 추가하거나 버그를 수정할 수 있습니다. \
+작업이 완료되면 `main` 브랜치에 병합(merge)할 수 있습니다.
+
+- **체크아웃 (Checkout)**
+체크아웃은 작업 중인 브랜치를 바꾸고 싶을 때 사용합니다. 예를 들어, `main` 브랜치에서 작업 중이던 것을 잠시 멈추고 `function`을 개발하는 브랜치로 전환할 수 있습니다.
 
 ### 1. `main` 브랜치
 
@@ -20,8 +26,8 @@
 
 - `main` 🌳
   - `sub` 🌿
-    - function-a 🍃
-    - function-b 🍃
+    - `function-a` 🍃
+    - `function-b` 🍃
 
 ### 작업 순서
 
