--- a/docs/git/깃_기본가이드.md
+++ b/docs/git/깃_기본가이드.md
@@ -7,7 +7,7 @@
   git config --global user.name "Your Name"
   git config --global user.email "your.email@example.com"
 ```
-혹시 깃이 설치되어있지 않나요? [[깃 설치]](#git-설치-윈도우)
+혹시 깃이 설치되어있지 않나요? [깃 설치](#git-설치)<!-- For VSCode -->
 
 ## 레포지토리 만들기 (깃허브)
 GitHub에서 새로운 레포지토리를 만들어야 합니다.
@@ -61,7 +61,7 @@ git push origin
 
 ---
 
-## Git 설치 (윈도우)
+## Git 설치
 Git이 설치되어 있지 않다면, 공식 문서에 따라 설치해야 합니다.
 - 공식 문서: [Git 설치](https://git-scm.com/book/ko/v2/시작하기-Git-설치하기)
 - 설치 파일 다운로드: [Git for Windows](https://gitforwindows.org/)
