네이버 클라우드 관련 문서 정리

--- a/docs/cloud/NCLOUD/NCP devtool/소스파이프라인참고.md
+++ b/docs/cloud/NCLOUD/NCP devtool/소스파이프라인참고.md
@@ -5,45 +5,45 @@ tags: ncp
 ## 1. 빌드 환경 설정
 - 네이버 클라우드 플랫폼에서 사용할 빌드 환경(예: JDK 버전, 빌드 도구 등)을 설정합니다. \
    _다음 예시는 maven 프로젝트를 기준으로 한 사진입니다._  
-   ![](img/2023-09-15-16-07-47.png)
-   ![](img/2023-09-15-16-08-14.png)
+   ![](2023-09-15-16-07-47.png)
+   ![](2023-09-15-16-08-14.png)
 
    - 도커이미지는 도커 허브에서 검색할 수 있습니다.  
-   ![](img/2023-09-15-16-14-17.png) ![](img/2023-09-15-16-14-26.png)
+   ![](2023-09-15-16-14-17.png) ![](2023-09-15-16-14-26.png)
 
 ## 2. **빌드 스크립트 작성**
    - 프로젝트에 맞는 빌드 스크립트(예: Maven의 pom.xml 또는 Gradle의 build.gradle)를 작성합니다.
-   ![](img/2023-09-15-16-15-33.png) 
-   ![](img/2023-09-15-16-16-15.png)
+   ![](2023-09-15-16-15-33.png) 
+   ![](2023-09-15-16-16-15.png)
    - 빌드 결과물 경로
-   ![](img/2023-09-15-16-16-53.png)
+   ![](2023-09-15-16-16-53.png)
 
 # 소스 디플로이
 
 ## 1. **디플로이 환경 설정**
 - 배포할 서버의 환경을 설정(ex: Tomcat 설정, 디렉토리 구조 등)
 - 배포 스테이지 생성 (배포타겟 `Server`) #추후에 다른 타겟 시나리오 작성 [#에이전트 설치방법](#에이전트-설치)
-![](img/2023-09-15-16-31-11.png)
+![](2023-09-15-16-31-11.png)
 - 배포 시나리오 생성
-![](img/2023-09-15-16-33-50.png)  
+![](2023-09-15-16-33-50.png)  
 - 배포 전략 설정  
-![](img/2023-09-15-16-34-32.png)
+![](2023-09-15-16-34-32.png)
 - 배포 파일 설정(Souce Build | Object Storage)
-![](img/2023-09-15-16-36-09.png)
-![](img/2023-09-15-16-37-18.png)
+![](2023-09-15-16-36-09.png)
+![](2023-09-15-16-37-18.png)
 
 ## 2. **배포 시나리오 설정**
 배포 명령어 설정
 
 - 배포 전 실행 명령어
-![](img/2023-09-15-16-44-58.png)
+![](2023-09-15-16-44-58.png)
     ```sh
     if [ ! -d "/usr/local/tomcat/webapps/ROOT.bak" ]; then cp -r /usr/local/tomcat/webapps/ROOT /usr/local/tomcat/webapps/ROOT.bak; fi
     #/usr/local/tomcat/webapps/ROOT.bak 디렉토리가 존재하지 않을 경우에만 ROOT 디렉토리를 ROOT.bak으로 복사합니다.
     ```
 - 파일 배포
-![](img/2023-09-15-16-53-37.png) \
-(mvntest.zip 파일구조 참고) ![](img/2023-09-15-16-53-01.png) 
+![](2023-09-15-16-53-37.png) \
+(mvntest.zip 파일구조 참고) ![](2023-09-15-16-53-01.png) 
     ```sh
     #소스 파일 경로 
     #('/'는 테스트 결과{'/opt/sourcedeploy/working/127356/source/'} 에러발생시 참고)
@@ -53,7 +53,7 @@ tags: ncp
     ```
 
 - 배포 후 실행 명령어
-![](img/2023-09-15-16-57-45.png)
+![](2023-09-15-16-57-45.png)
 ROOT폴더로 배포하기
     ```sh
     # 배포 후 실행 명령어
@@ -71,19 +71,19 @@ ROOT폴더로 배포하기
 ## 1. 파이프라인 설정
 ### 작업추가
 - 빌드 파이프라인 추가
-![](img/2023-09-15-17-35-00.png)
+![](2023-09-15-17-35-00.png)
 
 - 배포 파이프라인 추가
-![](img/2023-09-15-17-36-19.png)
+![](2023-09-15-17-36-19.png)
 
 - 파이프라인 설정  
-![](img/2023-09-15-17-36-51.png) \
+![](2023-09-15-17-36-51.png) \
 선행작업설정으로 파이프라인 순서 설정
 
 - 트리거 설정 \
 위에서 작업추가로 설정한 전체 파이프라인을 실행할 Trigger 설정 \
 여기서는 소스커밋 푸시를 트리거로 설정
-![](img/2023-09-15-17-40-30.png)
+![](2023-09-15-17-40-30.png)
 ## 2. 파이프라인 실행
 - 설정한 파이프라인을 실행하여 전체 프로세스가 잘 작동하는지 확인합니다.  
 *직접 파이프라인 실행하기 버튼 클릭 / 소스커밋 푸시 이벤트 발생시키기*
@@ -110,7 +110,7 @@ service sourcedeploy status
     ```sh
     ps -ef | grep main.py 
     ```
-    ![](img/2023-09-15-17-23-30.png)
+    ![](2023-09-15-17-23-30.png)
 
 ### Init Script 작성
 ```sh
