--- a/docs/git/깃허브 블로그 생성.md
+++ b/docs/git/깃허브 블로그 생성.md
@@ -43,3 +43,20 @@ jekyll 4.3.2
 2. 로컬에서 `bundle exec jekyll serve` 명령어를 실행하여 사이트를 빌드하고 테스트합니다.
 3. 모든 변경 사항을 커밋하고 `ARIDO` 저장소에 푸시합니다.
 4. GitHub Pages 설정에서 `ARIDO` 저장소를 사용하도록 설정합니다.
+
+깃허브액션 써서 뭔가 성공해서
+그냥 다른 레포에서 관리하려고 커밋 되돌림
+
+---
+
+네, 블로그를 위한 별도의 저장소를 만들고, 기존 `ARIDO` 저장소에 있는 문서들(마크다운, 텍스트 파일, 이미지 등)을 가져올 수 있습니다. 이를 위해 다음과 같은 방법을 사용할 수 있습니다:
+
+1. **Git Submodule**: `ARIDO` 저장소를 새 블로그 저장소의 서브모듈로 추가합니다. 이렇게 하면, `ARIDO` 저장소의 내용을 새 블로그 저장소 내에서 참조할 수 있습니다.
+
+2. **Git Subtree**: `ARIDO` 저장소의 일부를 새 블로그 저장소에 subtree로 추가합니다. 이는 서브모듈보다 더 긴밀하게 두 프로젝트를 통합할 수 있게 해줍니다.
+
+3. **Manual Copy**: 필요한 파일을 수동으로 복사하여 새 블로그 저장소에 붙여넣을 수도 있습니다. 이 경우, Git 이력은 유지되지 않습니다.
+
+4. **Script or GitHub Action**: 스크립트나 GitHub Action을 사용하여 `ARIDO` 저장소에서 새 블로그 저장소로 자동으로 파일을 복사하게 할 수 있습니다. 이 방법은 자동화된 프로세스를 설정하려는 경우에 유용합니다.
+
+새 블로그 저장소를 생성하고, 필요한 파일들을 이전할 방법을 결정한 뒤에 적절한 조치를 취하면 됩니다.
