chore : 리눅스 명령어 내용추가

--- a/docs/linux/리눅스 더미파일 생성.md
+++ b/docs/linux/리눅스 더미파일 생성.md
@@ -21,3 +21,20 @@ head -c 10G /dev/zero > test_dummy
 # 메모리 관리 능력에 따라 성능이 달라질 수 있으며, 스크립트 언어의 유연성을 제공합니다.
 python -c "with open('test_dummy', 'wb') as f: f.write(b'\x00' * (10**9 * 10))"
 ```
+
+---
+```bash
+[root@tf-jhk-obs nas]# ls
+[root@tf-jhk-obs nas]# dd if=/dev/zero of=100MB_file bs=1M count=100
+100+0 records in
+100+0 records out
+104857600 bytes (105 MB, 100 MiB) copied, 0.85098 s, 123 MB/s
+[root@tf-jhk-obs nas]# dd if=/dev/zero of=1GB_file bs=1M count=1024
+1024+0 records in
+1024+0 records out
+1073741824 bytes (1.1 GB, 1.0 GiB) copied, 8.31647 s, 129 MB/s
+[root@tf-jhk-obs nas]# dd if=/dev/zero of=10GB_file bs=10M count=1024
+1024+0 records in
+1024+0 records out
+10737418240 bytes (11 GB, 10 GiB) copied, 82.2683 s, 131 MB/s
+```
