쿠버 개념 문서 수정

--- a/docs/Kubernetes/[K8S] 1 쿠버네티스 기본 개념.md
+++ b/docs/Kubernetes/[K8S] 1 쿠버네티스 기본 개념.md
@@ -1,19 +1,24 @@
-대충 목차
-문서 1: 
-1. 서론
-	컨테이너와 도커의 기본 이해
-	쿠버네티스의 등장 배경 및 필요성
-2. 쿠버네티스의 기본 개념
-	컨테이너 오케스트레이션 이해
-	쿠버네티스의 주요 구성 요소 및 기능
-	쿠버네티스의 아키텍처 개요
+**1. 서론**
+- 쿠버네티스 개념의 이해
+- 컨테이너와 도커의 기본 개념
+- 쿠버네티스의 필요성 및 역할
 
+**2. 개념**
+- 2-1. 컨테이너
+    - 컨테이너의 정의 및 작동 원리
+    - 컨테이너와 가상 머신의 차이점
+    - 리눅스 커널과 컨테이너의 상호작용
+
+- 2-2. 쿠버네티스(Kubernetes)
+    - 쿠버네티스의 정의 및 핵심 기능
+    - 컨테이너 오케스트레이션의 중요성
+    - 마이크로서비스 아키텍처와 쿠버네티스의 관계
 
 
 ---
-# 서론
+# 1. 서론
 
-쿠버 개념 잡고 기본적인 테스트 환경(kind) 구성 부터  개념과 연결한 테스트까지. araboza
+이 문서에서는 쿠버네티스의 기본 개념을 알아볼 것입니다.
 
 세줄요약
 - 컨테이너는 리눅스 기반의 격리된 실행 환경을 제공하는 기술
@@ -27,7 +32,7 @@
 **도커**는 컨테이너를 생성하고 관리하는 데 사용되는 가장 인기 있는 컨테이너 관리 도구 중 하나입니다. 도커는 컨테이너화된 애플리케이션을 쉽게 개발, 배포 및 실행할 수 있도록 해주는 여러 도구와 워크플로우를 제공합니다. 도커는 컨테이너를 위한 기본 런타임 환경을 제공하며, 'Docker Engine'을 통해 컨테이너의 생명주기를 관리합니다.
 
 **쿠버네티스**는 컨테이너화된 애플리케이션의 배치, 스케일링 및 관리를 자동화하는 컨테이너 오케스트레이션 도구입니다.쿠버네티스는 복잡한 애플리케이션을 운영하고, 여러 컨테이너의 작업을 조정하며, 고가용성을 보장하고, 부하에 따라 자원을 자동으로 스케일링하는 등의 기능을 제공합니다. 도커와 달리, 쿠버네티스는 단일 호스트에서의 컨테이너 런타임 관리보다는 클러스터 단위에서 컨테이너를 운영하는 데 초점을 맞춥니다.
-# 개념설명
+# 2. 개념설명
 ### 컨테이너에 대한 이해
 
 컨테이너 기술은 소프트웨어를 실행하는 방식을 혁신적으로 변화시켰습니다. 전통적인 서버 관리가 시스템의 상태를 모니터링하고 애플리케이션을 개별적으로 살펴보는 데 집중했다면, 컨테이너는 애플리케이션에 특화된 격리된 환경을 제공함으로써 그 방식을 단순화시켰습니다. 이러한 격리는 리눅스 커널의 cgroups과 namespaces를 활용하여, 애플리케이션에 독립된 파일 시스템과 자원을 할당함으로써 실현됩니다. 이는 각 컨테이너가 마치 별도의 '미니 서버'처럼 작동하게 만들어, 하나의 서버에서 여러 애플리케이션을 효율적으로 운영할 수 있게 합니다.
@@ -50,17 +55,13 @@
 쿠버네티스는 마이크로서비스 아키텍처(MSA) 환경에서 유용합니다. MSA에서는 서비스별로 별도의 컨테이너를 사용하게 되며, 이를 효율적으로 관리하고 조정하는 것이 중요해집니다. 쿠버네티스 없이 이러한 환경에서 수동으로 배포와 관리를 시도하는 것은 현실적으로 불가능에 가깝습니다.
 
 예를 들어, 'upload', 'auth', 'pay'와 같은 서로 다른 기능을 가진 컨테이너들이 있을 때, 만약 'pay' 컨테이너에 문제가 생겨서 중단된다면 빠르게 재시작을 해야할 것입니다.
-쿠버네티스는 이를 빠르게 감지하고 재시작할 수 있습니다. 또한 여러 컨테이너를 효과적으로 관리하고 균형을 맞출 수 있는 능력을 포함?합니다.
+쿠버네티스는 이를 빠르게 감지하고 재시작할 수 있습니다. 또한 여러 컨테이너를 효과적으로 관리하고 균형을 맞출 수 있는 기능을 제공합니다.
 
 **오토스케일링**: 트래픽이 증가할 때 자동으로 컨테이너의 수를 조절해 대응할 수 있습니다. 이 기능은 시스템의 안정성을 유지하고 사용자의 요구에 민첩하게 반응할 수 있게 해줍니다.
 
 **무중단 업데이트**: 일반적인 클라우드 환경에서 수동으로 업데이트를 진행하면 일시적인 서비스 중단이 불가피합니다. 그러나 쿠버네티스를 사용하면 중단 없이 업데이트를 할 수 있습니다. 물론, 서버가 새로 생성되는 등 특정 상황에서는 잠깐 동안의 다운타임이 발생할 수 있습니다.
 
 (쿠버네티스 자체 버전이 자주 올라가는데 그 버전을 한번에 못올리는건 여기서는 다루지 않을거임)
-
-
-
----
 
 
 ---
