--- a/docs/Kubernetes/[K8S] 1 쿠버네티스 기본 개념.md
+++ b/docs/Kubernetes/[K8S] 1 쿠버네티스 기본 개념.md
@@ -1,3 +1,4 @@
+**0. 선수지식**
 **1. 서론**
 - 쿠버네티스 개념의 이해
 - 컨테이너와 도커의 기본 개념
@@ -14,6 +15,20 @@
     - 컨테이너 오케스트레이션의 중요성
     - 마이크로서비스 아키텍처와 쿠버네티스의 관계
 
+
+---
+# 선수 지식
+이 글은 OS, SW 개발 프로세스, 프로그래밍 , 컨테이너, 가상화 기술, 네트워크, 클라우드 컴퓨팅 에 대한 이해가 필요합니다. 이러한 개념들을 모두 깊게 이해할 필요는 없지만, 기본적인 지식이 있으면 문서의 내용을 이해하는 데 큰 도움이 될 것입니다.
+
+1. 운영 체제 : 리눅스 기반 시스템에 대한 기본적인 이해가 필요합니다. 쿠버네티스와 컨테이너 기술은 주로 리눅스 환경에서 사용되기 때문에, 리눅스의 기본 명령어, 파일 시스템 구조 등에 대한 지식이 도움이 됩니다.
+
+2. 소프트웨어 개발의 기본: 프로그래밍의 기본 개념(변수, 함수, 구조 등)과 소프트웨어 개발 프로세스에 대한 이해가 필요합니다. 파이썬을 배우고 있다면, 기본적인 프로그래밍 개념에 대한 이해가 있을 것입니다.
+
+3. 컨테이너와 가상화 기술: 컨테이너 기술과 가상 머신에 대한 기본적인 이해가 필요합니다. 컨테이너는 애플리케이션을 격리된 환경에서 실행하는 기술이며, 이것이 어떻게 전통적인 가상화 기술과 다른지를 이해하는 것이 중요합니다.
+
+4. 컴퓨터 네트워크: IP 주소, 포트, 프로토콜 등 기본적인 네트워크 개념에 대한 이해가 필요합니다. 쿠버네티스와 컨테이너는 네트워크를 통해 서로 통신하기 때문입니다.
+
+5. 클라우드 컴퓨팅: 클라우드 서비스(예: AWS, GCP, NCP)의 기본 개념과 이들이 제공하는 서비스에 대한 기본적인 지식이 유용합니다. 쿠버네티스는 클라우드 환경에서 효율적으로 작동하도록 설계되었기 때문입니다.
 
 ---
 # 1. 서론
@@ -61,8 +76,8 @@
 
 **무중단 업데이트**: 일반적인 클라우드 환경에서 수동으로 업데이트를 진행하면 일시적인 서비스 중단이 불가피합니다. 그러나 쿠버네티스를 사용하면 중단 없이 업데이트를 할 수 있습니다. 물론, 서버가 새로 생성되는 등 특정 상황에서는 잠깐 동안의 다운타임이 발생할 수 있습니다.
 
-(쿠버네티스 자체 버전이 자주 올라가는데 그 버전을 한번에 못올리는건 여기서는 다루지 않을거임)
-
+(쿠버네티스 자체 버전이 자주 올라가는데 그 버전을 한번에 못올리는 내용은 여기서 다루지 않습니다.)
+(eks, nks 이런것도 따로 다룰 예정 - 계획 미정)
 
 ---
 참고 문서
