리눅스 명령정리

--- a/5.IaC/Kubernetes/[K8S] 2 쿠버네티스 공부.md
+++ b/5.IaC/Kubernetes/[K8S] 2 쿠버네티스 공부.md
@@ -50,3 +50,50 @@ api 버전은 kubectl explan 명령 쓰면 확인가능
 ---
 참고 문서
 [따배쿠 시리즈](https://www.youtube.com/playlist?list=PLApuRlvrZKohaBHvXAOhUD-RxD0uQ3z0c)
+
+
+6-2 레플리카 셋 
+
+6-3 Deployment for RollingUpdate
+2024-01-19
+![[Pasted image 20240119111145.png]]
+
+디플로이먼트가 상위항목임
+deployment --> ReplicaSet --> Pod
+- 레플리카셋이랑 디플로이먼트랑 거의 똑같음
+
+---
+2024-01-23
+디플로이먼트 적용해보려고 kind 문서 보고 진행
+
+
+```sh
+kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
+```
+
+
+2024-01-29
+6-4. DaemonSet
+데몬셋 - 롤링업데이트
+- 전체 노드에서 파드가 한개씩 실행되도록 보장
+- 로그 수집기, 모니터링 에이전트 같은 프로그램 실행시 적용
+- 롤링업데이트 기능도 있음
+- yaml 에 컨테이너 종류만 적어주면 노드당 파드하나 보장
+	로그/모니터링 에이전트에 적합한 컨트롤러다
+
+
+6-5. Stateful sets
+스테이트풀셋
+- 파드 이름
+- 파드의 볼륨(스토리지)
+이걸 유지시켜준다.
+후에 serviceName 하고 파드 이름하고 연결해서 core dns 도메인 이름으로 사용가능
+- 스케일 업/다운? 확인하면서 쓸수있고, 항상 이름 보장받음
+
+6-6. job controller
+24/7 runnig중인 파드 보장
+`kubectl run testpod --image=centos:7 --command sleep 5`
+이런식으로 실행하면 5초뒤에 파드종료 -> 그럼 또 다시 쿠버가 살림 -> 계속 증가됨
+![[Pasted image 20240129120337.png]]
+![[Pasted image 20240129121042.png]]
+심지어는 에러가 나도 마찬가지
