mac 주소 매크로 관련

--- a/1.Programming/Python/스크립트.py Windows 실행 파일(.exe)로 패키징.md
+++ b/1.Programming/Python/스크립트.py Windows 실행 파일(.exe)로 패키징.md
@@ -11,3 +11,8 @@ pyinstaller --onefile run.py
 `--onefile` 옵션은 단일 실행 파일을 생성하도록 합니다. 생성된 `.exe` 파일은 `dist` 폴더 내에 위치합니다.
 
 위의 단계를 수행하면, `run.py` 스크립트가 `.exe` 형식으로 패키징됩니다. 해당 실행 파일은 동일한 폴더 내의 다른 Python 스크립트 파일을 실행하는 데 사용할 수 있습니다. 모든 필요한 파일들이 같은 디렉토리에 있어야 하며, 생성된 실행 파일은 Python 인터프리터나 다른 종속성 없이 독립적으로 실행될 수 있습니다.
+
+
+---
+그 mac 주소입력기 패키징 명령
+pyinstaller --onefile auto_v2.py --icon=icon.ico
