fix : 깃 초기설정

--- a/1.Programming/git/깃_기본가이드.md
+++ b/1.Programming/git/깃_기본가이드.md
@@ -8,7 +8,11 @@
   git config --global user.email "your.email@example.com"
 ```
 혹시 깃이 설치되어있지 않나요? [깃 설치](#git-설치)<!-- For VSCode -->
-
+혹시 NCP sourcecommit을 사용 하려고 한다면
+```bash
+  #사용자 이름, 이메일 주소 설정
+  git config --global user.password "Yourpassword12#"
+```
 ## 레포지토리 만들기 (깃허브)
 GitHub에서 새로운 레포지토리를 만들어야 합니다.
 
