--- a/1.Programming/git/깃_기본가이드.md
+++ b/1.Programming/git/깃_기본가이드.md
@@ -76,6 +76,7 @@ git --version
 ## NCP sourcecommit 사용시 추가설정
 ```bash
 #계정 비밀번호, 크레덴셜 추가
+# 간혹 그 credential manager 창이 안떠서 설정 누락되는 경우가있음
 git config --global user.password "Yourpassword12#"
 git config --global credential.https://devtools.ncloud.com.provider generic
 ```
