--- a/옵시디언.md
+++ b/옵시디언.md
@@ -27,13 +27,12 @@ https://obsidian.md/download
    - 원하는 플러그인 이름을 검색하고 설치합니다.
 
 5. **추천 플러그인 리스트 및 설명**
-	- **MAKE.md**: Obsidian 기능 향상. 파일 정렬, 아이콘 사용, 편집 기능 확장 등.
-	- Advanced Tables: 테이블 탐색, 서식, 조작 및 수식 향상.
+	- Excalidraw: Obsidian에서 Excalidraw 그림을 편집하고 보는 플러그인.⚪
+   	- Advanced Tables: 테이블 탐색, 서식, 조작 및 수식 향상.
 	- Better Word Count: 에디터에서 선택된 텍스트의 단어 수를 세어줍니다.
 	- Calendar: 일일 노트의 달력 뷰를 제공합니다.
-	- Dataview: 데이터 중심 사용자를 위한 복잡한 데이터 뷰를 제공합니다.
-	- Excalidraw: Obsidian에서 Excalidraw 그림을 편집하고 보는 플러그인.
-	- Iconize: Obsidian의 파일, 폴더, 텍스트에 아이콘 추가.
+	- Dataview: 데이터 중심 사용자를 위한 복잡한 데이터 뷰를 제공합니다.⚪
+	- Iconize: Obsidian의 파일, 폴더, 텍스트에 아이콘 추가.⚪
 	- Sortable: 위키 스타일의 테이블 정렬 기능.
 	- txt as md: 마크다운처럼 txt 파일을 편집합니다.
 ******
