--- a/옵시디언.md
+++ b/옵시디언.md
@@ -1,12 +1,8 @@
----
-sticker: emoji//1faa8
-color: ""
----
 https://obsidian.md/download
 
 ---
 
-**옵시디언 설치부터 플러그인 설치까지**
+### 옵시디언 설치부터 플러그인 까지
 
 1. **옵시디언 설치**
    - 구글에 'Obsidian'을 검색합니다.
@@ -33,7 +29,6 @@ https://obsidian.md/download
 	- Calendar: 일일 노트의 달력 뷰를 제공합니다.
 	- Dataview: 데이터 중심 사용자를 위한 복잡한 데이터 뷰를 제공합니다.⚪
 	- Iconize: Obsidian의 파일, 폴더, 텍스트에 아이콘 추가.⚪
-	- Sortable: 위키 스타일의 테이블 정렬 기능.
 	- txt as md: 마크다운처럼 txt 파일을 편집합니다.
 ******
 
